@@ -15,9 +15,15 @@ INSTALLS += PKGCONFIGFILES QTCONFIGFILES
 linux-g++-maemo {
     message("Compiling with devicelock support")
     DEFINES += __DEVICELOCK__
+
     message("Compiling with usb-moded-dev support")
     DEFINES += __USB_MODED_DEV__
+
+    message("Compiling with sysinfo support")
+    DEFINES += __SYSINFO__
+    LIBS += -lsysinfo
 } else {
     message("Compiling without devicelock support")
     message("Compiling without usb-moded-dev support")
+    message("Compiling without sysinfo support");
 }
