@@ -3,6 +3,7 @@ qmsystem2 (0.0.11) unstable; urgency=low
    [Matias Muhonen]
    * Made devicelock dependency optional
    * Made usb-moded-dev dependency optional
+   * Made sysinfo dependency optional
 
    [Tapio Rantala]
    * Proper package config file format
